--- a/src/TashHost.csproj
+++ b/src/TashHost.csproj
@@ -18,6 +18,7 @@
     <Version>2.0.$(VersionDays).$(VersionMinutes)</Version>
     <AssemblyName>Aspenlaub.Net.GitHub.CSharp.TashHost</AssemblyName>
     <RootNamespace>Aspenlaub.Net.GitHub.CSharp.TashHost</RootNamespace>
+    <ApplicationIcon>tashhost.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
